** Changes since 0.1.0

*** Breaking changes

- Seam's code has been moved to the =lisp/= subdirectory, where it
  should have been all along.  Make sure to update your =init.el=
  accordingly.

**** Renamed functions

- =seam-replace-string-in-notes= is now
  =seam-replace-string-in-all-notes=.

- =seam-visited-files= is now =seam-visited-notes=.

*** New features

- An option has been added to export internal links with a custom CSS
  class.  The default is set by =seam-export-internal-link-class=, and
  can overridden per-export using =:internal-link-class=.

- Custom slugs can now be set by adding the =SEAM_SLUG= property to a
  note's title headline.

*** Improvements

- Notes are no longer re-exported unnecessarily whenever a linked note
  is changed.

- When invoking =seam-delete-note=, the note's title is now mentioned.
  This is to reduce the risk of deleting the wrong note by mistake.

- Completion support is somewhat improved.  =ido-completing-read= now
  works properly, and Seam no longer binds =completion-ignore-case=.

*** Bugfixes

- Notes with single quotes in the name (') are no longer broken.

- =seam-visited-notes= no longer returns buffers that visit non-note
  files within =seam-note-directory=.  This could have resulted in
  Seam inappropriately modifying those files (e.g. updating links).

- Buffer titles are now set correctly from narrowed buffers.

- An issue with regexp escape sequences being interpreted in template
  variable replacements has been fixed.

- Seam now validates note types entered with =C-u seam-set-note-type=,
  averting any mishaps if an invalid type is entered.

- It is no longer possible to create a note with an empty slug.